# grabs.Native

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
grabs.Native/: Adapter.cs  Backend.cs  Class1.cs  ColorAttachmentInfo.cs  Descriptor.cs  DescriptorLayoutInfo.cs  GrabsNative.Buffer.cs  GrabsNative.CommandList.cs  GrabsNative.Descriptor.cs  GrabsNative.Device.cs  GrabsNative.Instance.cs  GrabsNative.Pipeline.cs  GrabsNative.Shader.cs  GrabsNative.Surface.cs  GrabsNative.Swapchain.cs  GrabsNative.Texture.cs  GrabsNative.cs  InstanceInfo.cs  PipelineInfo.cs  RenderPassInfo.cs  Result.cs  SwapchainInfo.cs  grabs.Native.csproj
include/grabs/: grabs.h
src/: grabs.c
